--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,9 +2,6 @@ name: Go
 
 on: [push, pull_request]
 
-env:
-  GOPATH: ${{ github.workspace }}/..
-
 jobs:
 
   build:
@@ -16,18 +13,18 @@ jobs:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
     steps:
 
-    - name: Setup Go
-      uses: actions/setup-go@v1
+    - uses: actions/setup-go@v2
       with:
         go-version: 1.x
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v1
-      with:
-        path: src/github.com/${{ github.repository }}
+    - name: Add $GOPATH/bin to $PATH
+      run: |
+        echo "::add-path::$(go env GOPATH)/bin"
 
-    - name: Unit test
-      run: go test
+    - uses: actions/checkout@v2
 
-    - name: Build
-      run: go build
+    - run: go test
+
+    - run: go build
+
+# based on: github.com/koron-go/_skeleton/.github/workflows/go.yml
