--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,6 +2,9 @@ name: Go
 
 on: [push]
 
+env:
+  GO_VERSION: '>=1.24.0'
+
 jobs:
 
   build:
@@ -10,17 +13,22 @@ jobs:
 
     strategy:
       matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        os:
+        - ubuntu-latest
+        - ubuntu-24.04-arm
+        - macos-latest
+        - windows-latest
     steps:
 
-    - uses: actions/setup-go@v2
-      with:
-        go-version: 1.x
+    - uses: actions/checkout@v5
 
-    - uses: actions/checkout@v2
+    - uses: actions/setup-go@v6
+      with:
+        go-version: ${{ env.GO_VERSION }}
 
     - run: go test
 
     - run: go build
 
 # based on: github.com/koron-go/_skeleton/.github/workflows/go.yml
+# $Hash:f4896f5aa7f5b429ac38ed1459247a517d97de4a198b825bac473ecf$
